--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Strategi Keuangan Modern & Interaktif</title>
 <meta name="description" content="Panduan manajemen keuangan, tips menabung, investasi cerdas, dan strategi finansial modern agar hidup lebih stabil dan aman.">
 <meta name="keywords" content="manajemen keuangan, tips menabung, strategi finansial, investasi cerdas, solusi keuangan, mengatur pengeluaran, perencanaan keuangan, budget, tabungan, pengeluaran bulanan, keuangan interaktif, artikel finansial">
+<meta name="google-site-verification" content="zJuCW-s5slOPvv_ALIbl0H2LRyTvi_0Pklmfkz5aUwo" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 <style>
@@ -246,3 +247,4 @@ document.querySelectorAll('.faq-item').forEach(item=>{
 
 </body>
 </html>
+
